updated spacing issue on diagnosis container

--- a/styles.css
+++ b/styles.css
@@ -166,7 +166,7 @@ li {
 }
 
 #diagnosis-header-container{
-  padding: 20px 0px 40px 20px;
+  padding: 20px 0px 30px 20px;
 }
 
 #diagnosis-header-container h1{
@@ -655,7 +655,7 @@ padding-left: 12px;
     font-size: 10px;
   }
 
-  .diagnosis-header-container{
+  #diagnosis-header-container{
     padding: 20px 20px 30px 20px;
   }
 
